[package]
name = "nado"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
libc = "0.2"
rand = "0.8"
rayon = "1.10"
regex = "1.11"
proptest = "1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
wait-timeout = "0.2"
